# 149segolte-wgpu-dsp

./: .gitignore  Cargo.toml  build.rs  rust-toolchain
gpu/: Cargo.toml  build.rs
gpu/compute_shader/: Cargo.toml
gpu/compute_shader/src/: lib.rs
gpu/kernels/compute/src/: lib.rs
gpu/src/: main.rs
kernels/compute/: Cargo.toml
kernels/compute/src/: lib.rs
server/: Cargo.toml
server/src/: app.rs  main.rs
src/: main.rs
wgpu/: build.rs
wgpu/shader/: Cargo.toml
wgpu/src/: main.rs
