[package]
name = "rust-gpu"
version = "0.1.0"
edition = "2021"
description = "Minimal rust-gpu compute shader example running on WGPU backend with Vulkan support"
keywords = ["rust-gpu", "wgpu", "compute-shader", "vulkan"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { version = "0.17.0", features = ["spirv", "vulkan-portability"] }

[build-dependencies]
spirv-builder = { version = "0.9.0" }