[package]
name = "wgpu-dsp"
version = "0.1.0"
edition = "2021"
description = "Minimal rust-gpu compute shader example running on WGPU backend with Vulkan support"
keywords = ["rust-gpu", "wgpu", "compute-shader", "vulkan"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { version = "0.18.0", features = ["spirv", "vulkan-portability"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "54f6978" }
